[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/game/ui/GUIManager.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/ui/GUISprite.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 18, 83, 59, 9 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 18, 67, 59, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16.1984, 51.022, 63.989, 9.16255 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 18, 67, 59, 9 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16.1984, 51.022, 63.989, 9.16255 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 16.2442, 36.1901, 63.776, 9.13459 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
fade_duration = 2.0
fade_delay = 1.0

[node name="StatsContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HpProgress1" type="TextureProgress" parent="StatsContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 15.0
max_value = 10.0
value = 5.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 7 )

[node name="ManaProgress" type="TextureProgress" parent="StatsContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 15.0
margin_right = 82.0
margin_bottom = 24.0
max_value = 10.0
value = 5.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 8 )
tint_progress = Color( 0.129412, 0.219608, 1, 1 )

[node name="StaminaProgress" type="TextureProgress" parent="StatsContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 24.0
margin_right = 82.0
margin_bottom = 33.0
max_value = 10.0
value = 5.0
texture_under = SubResource( 9 )
texture_progress = SubResource( 10 )
tint_progress = Color( 0.129412, 1, 0.433778, 1 )

[node name="HpProgress2" type="TextureProgress" parent="StatsContainer"]
unique_name_in_owner = true
margin_left = 3.0
margin_top = 2.0
margin_right = 19.0
margin_bottom = 18.0
max_value = 10.0
value = 5.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )
fill_mode = 3
